--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -51,6 +51,10 @@ rc_logger="YES"
 # The default value is: /var/log/rc.log
 #rc_log_path="/var/log/rc.log"
 
+# If you want verbose output for OpenRC, set this to yes. If you want
+# verbose output for service foo only, set it to yes in /etc/conf.d/foo.
+#rc_verbose=no
+
 # By default we filter the environment for our running scripts. To allow other
 # variables through, add them here. Use a * to allow all variables through.
 #rc_env_allow="VAR1 VAR2"
@@ -73,6 +77,10 @@ rc_logger="YES"
 #rc_crashed_stop=NO
 #rc_crashed_start=YES
 
+# Set rc_nocolor to yes if you do not want colors displayed in OpenRC
+# output.
+#rc_nocolor=NO
+
 ##############################################################################
 # MISC CONFIGURATION VARIABLES
 # There variables are shared between many init scripts
@@ -86,7 +94,7 @@ unicode="YES"
 
 # Below is the default list of network fstypes.
 #
-# afs cifs coda davfs fuse fuse.sshfs gfs glusterfs lustre ncpfs
+# afs ceph cifs coda davfs fuse fuse.sshfs gfs glusterfs lustre ncpfs
 # nfs nfs4 ocfs2 shfs smbfs
 #
 # If you would like to add to this list, you can do so by adding your
