--- a/etc/syslog-ng/syslog-ng.conf
+++ b/etc/syslog-ng/syslog-ng.conf
@@ -36,10 +36,11 @@ destination console_all { file("/dev/tty12"); };
 #log { source(src); destination(messages); };
 #log { source(src); destination(console_all); };
 
-filter f_not_fcron_test {
-    not program(fcron) or 
-    not message("pam_unix.*session.*for user root") and
-    not message("Job.*started for user") and
-    not message("Job.*completed"); };
-log { source(src); filter(f_not_fcron_test); destination(messages); };
-log { source(src); filter(f_not_fcron_test); destination(console_all); }; 
+filter f_not_cron {
+    not program(crond) and
+    not program(CROND) or 
+    not message(".*pam_unix.crond:session.*") and
+    not message(".*/var/spool/cron/lastrun.*") and
+    not message(".*/usr/sbin/run-crons.*"); };
+log { source(src); filter(f_not_cron); destination(messages); };
+log { source(src); filter(f_not_cron); destination(console_all); }; 
