--- a/etc/syslog-ng/syslog-ng.conf
+++ b/etc/syslog-ng/syslog-ng.conf
@@ -27,7 +27,7 @@ source src { system(); internal(); };
 destination messages { file("/var/log/messages"); };
 
 # By default messages are logged to tty12...
-destination console_all { file("/dev/tty12"); };
+#destination console_all { file("/dev/tty12"); };
 # ...if you intend to use /dev/console for programs like xconsole
 # you can comment out the destination line above that references /dev/tty12
 # and uncomment the line below.
@@ -43,4 +43,3 @@ filter f_not_cron {
     not message(".*/var/spool/cron/lastrun.*") and
     not message(".*/usr/sbin/run-crons.*"); };
 log { source(src); filter(f_not_cron); destination(messages); };
-log { source(src); filter(f_not_cron); destination(console_all); }; 
