--- a/etc/layman/layman.cfg
+++ b/etc/layman/layman.cfg
@@ -27,7 +27,7 @@ check_official : Yes
 # or edit the value above to the current name of your
 # installed overlay(s) file.
 
-##### NEW ##### Repo Config Options #####
+##### Repo Config Options #####
 #-----------------------------------------------------------
 # Defines whether or not a repos.conf or make.conf file is
 # required for the repository control group. Set to No for
@@ -64,6 +64,20 @@ auto_sync : Yes
 conf_type : repos.conf
 
 #-----------------------------------------------------------
+
+#### Database Config Options #### #### COMING SOON ####
+#-----------------------------------------------------------
+# Database types used by layman, only one should be specified.
+# (xml, json, sqlite)
+#db_type : xml
+
+#-----------------------------------------------------------
+
+#-----------------------------------------------------------
+# Protocols used by layman when adding overlays or updating
+# their URLs.
+# ex.) protocol_filter : git, http, https, etc,...
+# protocol_filter :
 
 #-----------------------------------------------------------
 # URLs of the remote lists of overlays (one per line) or
@@ -211,7 +225,7 @@ news_reporter: portage
 #
 # These commnad options will be added to the above commands
 # when the overlay is added or synced.
-# Use spaces to seperate command line arguments
+# Use spaces to separate command line arguments
 #
 #    note: there are some options hardcoded in the backend
 #          scripts already.  All VCS types listed here are
