--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -117,6 +117,9 @@ unicode="YES"
 # Some daemons are started and stopped via start-stop-daemon.
 # We can set some things on a per service basis, like the nicelevel.
 #SSD_NICELEVEL="-19"
+# Or the ionice level. The format is class[:data] , just like the
+# --ionice start-stop-daemon parameter.
+#SSD_IONICELEVEL="2:2"
 
 # Pass ulimit parameters
 # If you are using bash in POSIX mode for your shell, note that the
@@ -147,36 +150,47 @@ rc_xdm_after="net.eth1"
 #rc_foo_bar_after="clock"
 
 # You can also remove dependencies.
-# This is mainly used for saying which servies do NOT provide net.
+# This is mainly used for saying which services do NOT provide net.
 #rc_net_tap0_provide="!net"
 
-##############################################################################
-# LINUX SPECIFIC OPTIONS
-
-# This is the subsystem type. Valid options on Linux:
+# This is the subsystem type.
+# It is used to match against keywords set by the keyword call in the
+# depend function of service scripts.
+#
+# It should be set to the value representing the environment this file is
+# PRESENTLY in, not the virtualization the environment is capable of.
+# If it is commented out, automatic detection will be used.
+#
+# The list below shows all possible settings as well as the host
+# operating systems where they can be used and autodetected.
+#
 # ""               - nothing special
-# "docker"         - Docker container manager
+# "docker"         - Docker container manager (Linux)
+# "jail"           - Jail (DragonflyBSD or FreeBSD)
 # "lxc"            - Linux Containers
 # "openvz"         - Linux OpenVZ
 # "prefix"         - Prefix
-# "rkt"            - CoreOS container management system
+# "rkt"            - CoreOS container management system (Linux)
+# "subhurd"        - Hurd subhurds (to be checked)
+# "systemd-nspawn" - Container created by systemd-nspawn (Linux)
 # "uml"            - Usermode Linux
 # "vserver"        - Linux vserver
-# "systemd-nspawn" - Container created by the systemd-nspawn utility
-# "xen0"           - Xen0 Domain
-# "xenU"           - XenU Domain
-# If this is commented out, automatic detection will be used.
-#
-# This should be set to the value representing the environment this file is
-# PRESENTLY in, not the virtualization the environment is capable of.
+# "xen0"           - Xen0 Domain (Linux and NetBSD)
+# "xenU"           - XenU Domain (Linux and NetBSD)
 #rc_sys=""
 
-# This is the number of tty's used in most of the rc-scripts (like
-# consolefont, numlock, etc ...)
+# if  you use openrc-init, which is currently only available on Linux,
+# this is the default runlevel to activate after "sysinit" and "boot"
+# when booting.
+#rc_default_runlevel="default"
+
+# on Linux and Hurd, this is the number of ttys allocated for logins
+# It is used in the consolefont, keymaps, numlock and termencoding
+# service scripts.
 rc_tty_number=12
 
 ##############################################################################
-# CGROUPS RESOURCE MANAGEMENT
+# LINUX CGROUPS RESOURCE MANAGEMENT
 
 # If you have cgroups turned on in your kernel, this switch controls
 # whether or not a group for each controller is mounted under
@@ -231,7 +245,7 @@ rc_tty_number=12
 # Set the pids controller settings for this service.
 #rc_cgroup_pids=""
 
-# Set this to YES if yu want all of the processes in a service's cgroup
+# Set this to YES if you want all of the processes in a service's cgroup
 # killed when the service is stopped or restarted.
 # This should not be set globally because it kills all of the service's
 # child processes, and most of the time this is undesirable. Please set
