--- a/etc/syslog-ng/syslog-ng.conf
+++ b/etc/syslog-ng/syslog-ng.conf
@@ -1,5 +1,4 @@
 @version: 3.7
-# $Id$
 #
 # Syslog-ng default configuration file for Gentoo Linux
 
@@ -27,7 +26,7 @@ source src { system(); internal(); };
 destination messages { file("/var/log/messages"); };
 
 # By default messages are logged to tty12...
-#destination console_all { file("/dev/tty12"); };
+destination console_all { file("/dev/tty12"); };
 # ...if you intend to use /dev/console for programs like xconsole
 # you can comment out the destination line above that references /dev/tty12
 # and uncomment the line below.
