add GPG key for signing github commits (needed for gentoo pull requests)

--- a/root/.gitconfig
+++ b/root/.gitconfig
@@ -1,5 +1,6 @@
 [user]
         email = nilathak@users.noreply.github.com
         name = Hannes Schweizer
+	signingkey = 2BAB4EED751A995D
 [push]
 	default = simple
