finish guest wlan configuration - do not wait on network before starting xdm, speed up boot time. no side-effects detected up to now - remove network dependency of xdm by removing openvpn dependency - guest wlan needs to be started after hostapd

--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -140,7 +140,8 @@ unicode="YES"
 #rc_foo_config="/etc/foo"
 #rc_foo_need="openvpn"
 #rc_foo_after="clock"
-rc_xdm_after="net.eth1"
+rc_net_wlan1_after="hostapd"
+rc_xdm_after="!openvpn"
 
 # Below is an example for service foo-bar. Note that the '-' is illegal
 # in a shell variable name, so we convert it to an underscore.
