Enable syslog-ng kmsg logging without upstream patching

--- a/etc/syslog-ng/syslog-ng.conf
+++ b/etc/syslog-ng/syslog-ng.conf
@@ -1,4 +1,4 @@
-@version: 3.13
+@version: 3.16
 #
 # Syslog-ng default configuration file for Gentoo Linux
 
@@ -21,7 +21,12 @@ options {
 	mark_freq(3600);
 };
 
-source src { system(); internal(); };
+source src {
+       # https://www.syslog-ng.com/technical-documents/doc/syslog-ng-open-source-edition/3.16/administration-guide/24#TOPIC-956474
+       # /usr/share/syslog-ng/tools/system-expand.sh
+       unix-dgram("/dev/log" so_rcvbuf(8192));
+       file("/proc/kmsg" program-override("kernel") flags(kernel) keep-timestamp(no));
+       internal(); };
 
 destination messages { file("/var/log/messages"); };
 
@@ -32,13 +37,5 @@ destination console_all { file("/dev/tty12"); };
 # and uncomment the line below.
 #destination console_all { file("/dev/console"); };
 
-#log { source(src); destination(messages); };
-#log { source(src); destination(console_all); };
-
-filter f_not_cron {
-    not program(crond) and
-    not program(CROND) or 
-    not message(".*pam_unix.crond:session.*") and
-    not message(".*/var/spool/cron/lastrun.*") and
-    not message(".*/usr/sbin/run-crons.*"); };
-log { source(src); filter(f_not_cron); destination(messages); };
+log { source(src); destination(messages); };
+log { source(src); destination(console_all); };
