--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -141,7 +141,7 @@ unicode="YES"
 #rc_foo_need="openvpn"
 #rc_foo_after="clock"
 rc_net_wlan1_after="hostapd"
-rc_xdm_after="!openvpn"
+rc_xdm_after="!netmount !openvpn"
 
 # Below is an example for service foo-bar. Note that the '-' is illegal
 # in a shell variable name, so we convert it to an underscore.
@@ -228,6 +228,11 @@ rc_tty_number=12
 # individually mounted under
 # /sys/fs/cgroup in hybrid or legacy mode.
 #rc_controller_cgroups="YES"
+
+# The following setting turns on the memory.use_hierarchy setting in the
+# root memory cgroup for cgroups v1.
+# It must be set to yes in this file if you want this functionality.
+#rc_cgroup_memory_use_hierarchy="NO"
 
 # The following settings allow you to set up values for the cgroups version 1
 # controllers for your services.
